Proyecto lenguaje de señas con backend Node.js y SQLite

--- a/aprender.html
+++ b/aprender.html
@@ -39,58 +39,37 @@
                 <div class="videos-grid">
                     <div class="video-card">
                         <div class="video-wrapper">
-                            <iframe 
-                                src="https://www.youtube.com/embed/Pur0liS_6_E" 
-                                title="Aprende Lenguaje de Señas - Básico" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                allowfullscreen>
-                            </iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/K-NH79S0YUU?si=3db0WfOl7uuOIxEh" title="Lenguaje de señas para niños/Lesco 🖐🏻" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <h4>Introducción al Lenguaje de Señas</h4>
-                        <p>Aprende los fundamentos básicos del lenguaje de señas</p>
+                        <h4>Lenguaje de señas para niños/Lesco 🖐🏻</h4>
                     </div>
 
                     <div class="video-card">
                         <div class="video-wrapper">
-                            <iframe 
-                                src="https://www.youtube.com/embed/v1desDduz5M" 
-                                title="Alfabeto en Lenguaje de Señas" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                allowfullscreen>
-                            </iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/FxblFsIf2sk?si=cXca0ATcULGAxFk2" title="Aprendes y en Señas - Lección 1: Saludos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <h4>El Alfabeto Manual</h4>
-                        <p>Domina el alfabeto en lenguaje de señas</p>
+                        <h4>Aprendes y en Señas - Lección 1: Saludos</h4>
                     </div>
 
                     <div class="video-card">
                         <div class="video-wrapper">
-                            <iframe 
-                                src="https://www.youtube.com/embed/fqPFwJKEYSs" 
-                                title="Números en Lenguaje de Señas" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                allowfullscreen>
-                            </iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/vFU_1wMssuc?si=yb8vpcqakzeUkR9a" title="Aprende y en Señas - Abecedario Lengua de Señas Mexicana (Parte 1)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <h4>Números y Cantidades</h4>
-                        <p>Aprende a expresar números en lenguaje de señas</p>
+                        <h4>Aprende y en Señas - Abecedario Lengua de Señas Mexicana (Parte 1)</h4>
                     </div>
 
                     <div class="video-card">
                         <div class="video-wrapper">
-                            <iframe 
-                                src="https://www.youtube.com/embed/ILIxK5cYBRQ" 
-                                title="Frases Cotidianas" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                allowfullscreen>
-                            </iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/G9PePxYTvS0?si=0YzqRA63cdFSHbmY" title="Aprende y en Señas - Abecedario (parte 2)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <h4>Frases Cotidianas</h4>
-                        <p>Expresiones comunes para el día a día</p>
+                        <h4>Aprende y en Señas - Abecedario (parte 2)</h4>
+                    </div>
+
+                    <div class="video-card">
+                        <div class="video-wrapper">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/S4xWr_xASF4?si=URUJm7qUMKkImOyS" title="Aprende y en Señas - Abecedario (parte 3)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <h4>Aprende y en Señas - Abecedario (parte 3)</h4>
                     </div>
                 </div>
             </div>
@@ -101,50 +80,15 @@
             <div class="container">
                 <h3 class="section-title">📄 Documentos y Guías PDF</h3>
                 <div class="pdf-grid">
-                    <div class="pdf-card">
+                    <div class="pdf-card" onclick="abrirPDF('pdfs/Diccionario_lengua_Senas.pdf')" style="cursor: pointer;">
                         <div class="pdf-icon">📕</div>
-                        <h4>Guía Básica del Alfabeto</h4>
-                        <p>Manual completo con ilustraciones del alfabeto manual en lenguaje de señas</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('alfabeto')">Descargar PDF</a>
-                    </div>
-
-                    <div class="pdf-card">
-                        <div class="pdf-icon">📗</div>
-                        <h4>Vocabulario Esencial</h4>
-                        <p>Más de 200 palabras comunes ilustradas en lenguaje de señas</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('vocabulario')">Descargar PDF</a>
-                    </div>
-
-                    <div class="pdf-card">
-                        <div class="pdf-icon">📘</div>
-                        <h4>Gramática y Estructura</h4>
-                        <p>Aprende la estructura gramatical del lenguaje de señas</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('gramatica')">Descargar PDF</a>
-                    </div>
-
-                    <div class="pdf-card">
-                        <div class="pdf-icon">📙</div>
-                        <h4>Expresiones Faciales</h4>
-                        <p>Guía sobre la importancia de las expresiones faciales en la comunicación</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('expresiones')">Descargar PDF</a>
-                    </div>
-
-                    <div class="pdf-card">
-                        <div class="pdf-icon">📔</div>
-                        <h4>Conversaciones Prácticas</h4>
-                        <p>Diálogos completos para practicar situaciones reales</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('conversaciones')">Descargar PDF</a>
-                    </div>
-
-                    <div class="pdf-card">
-                        <div class="pdf-icon">📓</div>
-                        <h4>Vocabulario Temático</h4>
-                        <p>Palabras organizadas por temas: familia, comida, colores, etc.</p>
-                        <a href="#" class="btn btn-secondary" onclick="descargarPDF('tematico')">Descargar PDF</a>
+                        <h4>DICCIONARIO DE LENGUA DE SEÑAS MEXICANA</h4>
+                        <p>Diccionario completo con ilustraciones del lenguaje de señas</p>
+                        <span class="btn btn-secondary">Ver PDF</span>
                     </div>
                 </div>
                 <div class="pdf-note">
-                    <p><strong>Nota:</strong> Los PDFs de ejemplo están simulados. Puedes agregar tus propios archivos PDF en la carpeta del proyecto y actualizar los enlaces.</p>
+                    <p><strong>Nota:</strong> Haz clic en cualquier parte de la tarjeta para abrir el PDF en una nueva ventana.</p>
                 </div>
             </div>
         </section>
