Add authentication system and update UI elements
- Introduced a new JavaScript file for handling user authentication using localStorage.
- Implemented session verification and page protection to ensure users are logged in to access certain pages.
- Updated the navigation bar to reflect the user's login status.
- Added registration and login form handling with server communication.
- Included a new icon image for branding in the header across multiple pages.
- Adjusted file paths for CSS and JavaScript to maintain consistency.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprende Lenguaje de Señas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icono.png">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>🤟 Lenguaje de Señas</h1>
+                    <a href="index.html" class="logo-link">
+                        <img src="images/icono.png" alt="Logo" class="logo-img">
+                        <h1>Lenguaje de Señas</h1>
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
@@ -55,11 +59,6 @@
                         <h3>Práctica Interactiva</h3>
                         <p>Mejora tus habilidades con ejercicios prácticos y ejemplos reales</p>
                     </div>
-                    <div class="feature-card">
-                        <div class="icon">🌟</div>
-                        <h3>Progreso Personal</h3>
-                        <p>Registra tu avance y mantén un seguimiento de tu aprendizaje</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -80,6 +79,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
