--- a/login.html
+++ b/login.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Lenguaje de Señas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>🤟 Lenguaje de Señas</h1>
+                    <a href="index.html" class="logo-link">
+                        <img src="images/icono.png" alt="Logo" class="logo-img">
+                        <h1>Lenguaje de Señas</h1>
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="login.html">Iniciar Sesión</a></li>
@@ -52,6 +55,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
