--- a/aprender.html
+++ b/aprender.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprender - Lenguaje de Señas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>🤟 Lenguaje de Señas</h1>
+                    <a href="index.html" class="logo-link">
+                        <img src="images/icono.png" alt="Logo" class="logo-img">
+                        <h1>Lenguaje de Señas</h1>
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
@@ -80,7 +83,7 @@
             <div class="container">
                 <h3 class="section-title">📄 Documentos y Guías PDF</h3>
                 <div class="pdf-grid">
-                    <div class="pdf-card" onclick="abrirPDF('pdfs/Diccionario_lengua_Senas.pdf')" style="cursor: pointer;">
+                    <div class="pdf-card" onclick="abrirPDF('docs/pdfs/Diccionario_lengua_Senas.pdf')" style="cursor: pointer;">
                         <div class="pdf-icon">📕</div>
                         <h4>DICCIONARIO DE LENGUA DE SEÑAS MEXICANA</h4>
                         <p>Diccionario completo con ilustraciones del lenguaje de señas</p>
@@ -139,6 +142,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
