feat: Agregar enlaces de navegación a secciones de Videos y PDFs; implementar desplazamiento suave

--- a/aprender.html
+++ b/aprender.html
@@ -18,7 +18,8 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="aprender.html">Aprender</a></li>
+                    <li><a href="aprender.html#videos">Videos</a></li>
+                    <li><a href="aprender.html#pdfs">PDFs</a></li>
                     <li><a href="login.html" id="loginBtnNav">Iniciar Sesión</a></li>
                     <li><a href="registro.html" id="registroBtnNav">Registrarse</a></li>
                     <li><a href="#" id="logoutBtnNav" style="display:none;">Cerrar Sesión</a></li>
@@ -36,7 +37,7 @@
         </section>
 
         <!-- Sección de Videos -->
-        <section class="content-section">
+        <section class="content-section" id="videos">
             <div class="container">
                 <h3 class="section-title">📹 Videos Educativos</h3>
                 <div class="videos-grid">
@@ -79,7 +80,7 @@
         </section>
 
         <!-- Sección de PDFs -->
-        <section class="content-section pdf-section">
+        <section class="content-section pdf-section" id="pdfs">
             <div class="container">
                 <h3 class="section-title">📄 Documentos y Guías PDF</h3>
                 <div class="pdf-grid">
