--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="aprender.html" id="aprenderLink">Aprender</a></li>
+                    <li><a href="aprender.html#videos">Videos</a></li>
+                    <li><a href="aprender.html#pdfs">PDFs</a></li>
                     <li><a href="login.html" id="loginBtn">Iniciar Sesión</a></li>
                     <li><a href="registro.html" id="registroBtn">Registrarse</a></li>
                     <li><a href="#" id="logoutBtn" style="display:none;">Cerrar Sesión</a></li>
