--- a/registro.html
+++ b/registro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Lenguaje de Señas</title>
+    <link rel="icon" href="images/icono.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
