--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="aprender.html#videos">Videos</a></li>
-                    <li><a href="aprender.html#pdfs">PDFs</a></li>
+                    <li><a href="aprender.html#diccionario">Diccionario LSM</a></li>
+                    <li><a href="aprender.html#ejercicios">Ejercicios LSM</a></li>
                     <li><a href="login.html" id="loginBtn">Iniciar Sesión</a></li>
                     <li><a href="registro.html" id="registroBtn">Registrarse</a></li>
                     <li><a href="#" id="logoutBtn" style="display:none;">Cerrar Sesión</a></li>
