feat: Agregar sección de Galería con imágenes y videos; actualizar enlaces de navegación en varias páginas

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="aprender.html#videos">Videos</a></li>
+                    <li><a href="galeria.html">Galería</a></li>
                     <li><a href="aprender.html#diccionario">Diccionario LSM</a></li>
                     <li><a href="aprender.html#ejercicios">Ejercicios LSM</a></li>
                     <li><a href="login.html" id="loginBtn">Iniciar Sesión</a></li>
@@ -76,8 +77,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Lenguaje de Señas. Todos los derechos reservados.</p>
-            <p>Hecho con ❤️ para la inclusión</p>
+            <img src="images/icono.png" alt="Logo" class="logo-img">
+            <h1>Lenguaje de Señas</h1>
         </div>
     </footer>
 
