--- a/registro.html
+++ b/registro.html
@@ -61,7 +61,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Lenguaje de Señas. Todos los derechos reservados.</p>
+            <img src="images/icono.png" alt="Logo" class="logo-img">
+            <h1>Lenguaje de Señas</h1>
         </div>
     </footer>
 
