fix: corregir nombre de archivo en enlace de Ejercicios LSM

--- a/aprender.html
+++ b/aprender.html
@@ -96,7 +96,7 @@
                     </div>
 
                     <!-- Ejercicios LSM -->
-                    <div class="pdf-card" id="ejercicios" onclick="abrirPDF('docs/pdfs/ejercicios_VF.pdf')" style="cursor: pointer;">
+                    <div class="pdf-card" id="ejercicios" onclick="abrirPDF('docs/pdfs/ejercicios_Vf.pdf')" style="cursor: pointer;">
                         <div class="pdf-icon">📗</div>
                         <h4>Cuaderno de Actividades Didácticas</h4>
                         <p>Ejercicios y actividades para practicar LSM</p>
