feat: actualizar sección "Sobre el Lenguaje de Señas" con información detallada y características

--- a/index.html
+++ b/index.html
@@ -69,8 +69,23 @@
         <section class="about">
             <div class="container">
                 <h2>Sobre el Lenguaje de Señas</h2>
-                <p>El lenguaje de señas es una forma de comunicación visual-gestual que utilizan principalmente las personas sordas o con dificultades auditivas. Aprender este lenguaje no solo te permite comunicarte con la comunidad sorda, sino que también fomenta la inclusión y el entendimiento mutuo.</p>
-                <p>Nuestra plataforma está diseñada para hacer que el aprendizaje sea accesible, divertido y efectivo para todos.</p>
+                <p>El lenguaje de señas es un sistema de comunicación visual que utiliza las manos, expresiones faciales y corporales para transmitir mensajes, y es la lengua natural de muchas personas sordas. A diferencia del habla, se basa en la configuración de las manos, los movimientos y el uso del espacio, e incluye su propia gramática y estructura lingüística, no siendo simplemente una traducción del idioma hablado. Existen cientos de lenguas de señas diferentes en el mundo, como la Lengua de Señas Mexicana (LSM), que es reconocida como lengua nacional en México.</p>
+
+                <h3>Características principales</h3>
+                <ul>
+                    <li><strong>Comunicación visual:</strong> Utiliza las manos, los brazos, la cara y el cuerpo para crear signos y comunicar ideas.</li>
+                    <li><strong>Lengua completa:</strong> Posee su propia gramática, sintaxis y riqueza cultural, al igual que cualquier otra lengua oral.</li>
+                    <li><strong>Identidad cultural:</strong> Es una parte fundamental de la identidad y cultura de la comunidad sorda.</li>
+                    <li><strong>Diversidad de lenguas:</strong> Cada país y región tiene su propia lengua de señas, con variaciones regionales y dialectos.</li>
+                    <li><strong>Diferencia entre "lengua" y "lenguaje":</strong> Se prefiere el término "lengua de señas" en lugar de "lenguaje de señas" para reconocer su estatus lingüístico y su estructura compleja.</li>
+                </ul>
+
+                <h3>Importancia</h3>
+                <ul>
+                    <li><strong>Inclusión:</strong> Es una herramienta vital para la inclusión social y la participación plena de las personas sordas en la sociedad.</li>
+                    <li><strong>Derecho humano:</strong> El derecho a usar la lengua de señas es reconocido internacionalmente como un derecho humano y cultural de la comunidad sorda.</li>
+                    <li><strong>Acceso a la información:</strong> Permite garantizar el acceso a la educación y a la información para las personas con discapacidad auditiva.</li>
+                </ul>
             </div>
         </section>
     </main>
