feat: agregar página de información y enlaces de navegación en varias páginas

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="aprender.html#diccionario">Diccionario LSM</a></li>
                     <li><a href="aprender.html#ejercicios">Ejercicios LSM</a></li>
+                    <li><a href="info.html">?</a></li>
                     <li><a href="login.html" id="loginBtn">Iniciar Sesión</a></li>
                     <li><a href="registro.html" id="registroBtn">Registrarse</a></li>
                     <li><a href="#" id="logoutBtn" style="display:none;">Cerrar Sesión</a></li>
