--- a/galeria.html
+++ b/galeria.html
@@ -24,6 +24,7 @@
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="aprender.html#diccionario">Diccionario LSM</a></li>
                     <li><a href="aprender.html#ejercicios">Ejercicios LSM</a></li>
+                    <li><a href="info.html">?</a></li>
                     <li><a href="login.html" id="loginBtnNav">Iniciar Sesión</a></li>
                     <li><a href="registro.html" id="registroBtnNav">Registrarse</a></li>
                     <li><a href="#" id="logoutBtnNav" style="display:none;">Cerrar Sesión</a></li>
